specifically set flex-grow: 1 instead of flex: 1 to avoid unintended behaviour on IE11 when flex-basis defaults to 0px (flex-basis defaults to auto in other browsers) (#1620)

--- a/src/sass/trumps/_utilities.scss
+++ b/src/sass/trumps/_utilities.scss
@@ -142,7 +142,7 @@
 }
 
 .#{$ns}-u-flex-grow {
-	flex: 1;
+	flex-grow: 1;
 }
 
 .#{$ns}-u-flex-verticalalign-center {
